💎👨‍❤️‍👨 Checkpoint ./public/index.html:9043897/2740 ./public/index.css:9043897/1269 ./public/index.js:9043897/664 ./public/manifest.json:9043897/362 ./public/join/index.html:9043897/1991 ./public/join/join.css:9043897/381 ./public/join/join.js:9043897/640 ./public/host/host.css:9043897/792 ./public/host/host.js:9043897/1860 ./public/host/index.html:9043897/2958 ./index.js:9043897/1739

--- a/public/host/host.css
+++ b/public/host/host.css
@@ -1,31 +1,32 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font: 15px/24px "Lato", Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font: 15px/24px "Lato", Arial, sans-serif;
 }
 
-html, body{
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 .a {
-    display: inline-block;
-    vertical-align: top;
+  display: inline-block;
+  vertical-align: top;
 }
 
 .div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .button {
-    margin-top: 10px !important;
+  margin-top: 10px !important;
 }
 
 .input {
-    width: 250px;
+  width: 250px;
 }
