--- a/public/join/join.css
+++ b/public/join/join.css
@@ -1,12 +1,13 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    font: 15px/24px "Lato", Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  font: 15px/24px "Lato", Arial, sans-serif;
 }
 
-html, body {
-    height: 100%;
-    width: 100%;
+html,
+body {
+  height: 100%;
+  width: 100%;
 }
